[package]
name = "integration-tests"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true

readme.workspace = true
repository.workspace = true
version.workspace = true

[build-dependencies]
substrate-wasm-builder.workspace = true

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }

# Local
polimec-receiver.workspace = true
macros.workspace = true
polimec-traits.workspace = true

sp-arithmetic.workspace = true
frame-system.workspace = true
frame-support.workspace = true
pallet-balances.workspace = true
sp-std.workspace = true
sp-core.workspace = true
sp-runtime.workspace = true
sp-io.workspace = true
pallet-funding.workspace = true
pallet-linear-release.workspace = true
xcm.workspace = true
xcm-emulator.workspace = true
xcm-executor.workspace = true
xcm-builder.workspace = true
pallet-xcm.workspace = true
pallet-assets.workspace = true
polkadot-core-primitives.workspace = true
polkadot-runtime-parachains.workspace = true
polkadot-parachain.workspace = true

cumulus-primitives-core.workspace = true
cumulus-pallet-xcm.workspace = true
cumulus-pallet-xcmp-queue.workspace = true

parachain-info.workspace = true
parachains-common.workspace = true
sc-consensus-grandpa.workspace = true
pallet-im-online.workspace = true
polkadot-primitives.workspace = true
polkadot-service.workspace = true
sp-authority-discovery.workspace = true
sp-consensus-babe.workspace = true
polkadot-runtime-constants.workspace = true
pallet-staking.workspace = true
pallet-message-queue.workspace = true
pallet-membership.workspace = true
orml-oracle.workspace = true
pallet-parachain-staking.workspace = true
pallet-vesting.workspace = true
itertools.workspace = true

# Runtimes
polkadot-runtime.workspace = true
asset-hub-polkadot-runtime.workspace = true
polimec-parachain-runtime.workspace = true
polimec-base-runtime.workspace = true
penpal-runtime = { path = "./penpal", default-features = false }

[features]
default = [ "std", "testing-node", "instant-mode" ]
instant-mode = [ "polimec-parachain-runtime/instant-mode", "polimec-base-runtime/instant-mode" ]
testing-node = [
	"pallet-funding/testing-node",
	"polimec-parachain-runtime/testing-node",
	"polimec-base-runtime/testing-node",
]
std = [
	"asset-hub-polkadot-runtime/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-core/std",
	"frame-support/std",
	"frame-system/std",
	"itertools/use_std",
	"orml-oracle/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"pallet-funding/std",
	"pallet-im-online/std",
	"pallet-linear-release/std",
	"pallet-membership/std",
	"pallet-message-queue/std",
	"pallet-parachain-staking/std",
	"pallet-staking/std",
	"pallet-vesting/std",
	"pallet-xcm/std",
	"parachain-info/std",
	"parachains-common/std",
	"parity-scale-codec/std",
	"penpal-runtime/std",
	"polimec-parachain-runtime/std",
	"polimec-receiver/std",
	"polimec-traits/std",
	"polkadot-core-primitives/std",
	"polkadot-parachain/std",
	"polkadot-primitives/std",
	"polkadot-runtime-constants/std",
	"polkadot-runtime-parachains/std",
	"polkadot-runtime/std",
	"scale-info/std",
	"sp-arithmetic/std",
	"sp-authority-discovery/std",
	"sp-consensus-babe/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
]
runtime-benchmarks = [
	"asset-hub-polkadot-runtime/runtime-benchmarks",
	"cumulus-pallet-xcmp-queue/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"itertools/use_alloc",
	"pallet-assets/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-funding/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-linear-release/runtime-benchmarks",
	"pallet-membership/runtime-benchmarks",
	"pallet-message-queue/runtime-benchmarks",
	"pallet-parachain-staking/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-vesting/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"penpal-runtime/runtime-benchmarks",
	"polimec-base-runtime/runtime-benchmarks",
	"polimec-parachain-runtime/runtime-benchmarks",
	"polimec-receiver/runtime-benchmarks",
	"polimec-traits/runtime-benchmarks",
	"polkadot-parachain/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"polkadot-runtime-parachains/runtime-benchmarks",
	"polkadot-runtime/runtime-benchmarks",
	"polkadot-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
]
try-runtime = [
	"asset-hub-polkadot-runtime/try-runtime",
	"cumulus-pallet-xcm/try-runtime",
	"cumulus-pallet-xcmp-queue/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"orml-oracle/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-funding/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-linear-release/try-runtime",
	"pallet-membership/try-runtime",
	"pallet-message-queue/try-runtime",
	"pallet-parachain-staking/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-vesting/try-runtime",
	"pallet-xcm/try-runtime",
	"parachain-info/try-runtime",
	"penpal-runtime/try-runtime",
	"polimec-base-runtime/try-runtime",
	"polimec-parachain-runtime/try-runtime",
	"polimec-receiver/try-runtime",
	"polimec-traits/try-runtime",
	"polkadot-runtime-parachains/try-runtime",
	"polkadot-runtime/try-runtime",
	"polkadot-service/try-runtime",
	"sp-runtime/try-runtime",
]

