[package]
name = "integration-tests"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true

readme.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[build-dependencies]
substrate-wasm-builder.workspace = true

[dependencies]
serde = { workspace = true  }
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }

# Local
polimec-receiver.workspace = true
macros.workspace = true
polimec-common.workspace = true
polimec-common-test-utils.workspace = true
sp-arithmetic.workspace = true
frame-system.workspace = true
frame-support.workspace = true
pallet-balances.workspace = true
sp-std.workspace = true
sp-core.workspace = true
sp-runtime.workspace = true
sp-io.workspace = true
pallet-dispenser.workspace = true
pallet-transaction-payment.workspace = true
pallet-funding.workspace = true
pallet-linear-release.workspace = true
xcm.workspace = true
xcm-emulator.workspace = true
xcm-executor.workspace = true
xcm-builder.workspace = true
pallet-xcm.workspace = true
pallet-assets.workspace = true
polkadot-core-primitives.workspace = true
polkadot-runtime-parachains.workspace = true
polkadot-parachain-primitives.workspace = true
pallet-collective.workspace = true
pallet-elections-phragmen.workspace = true
pallet-message-queue.workspace = true

cumulus-primitives-core.workspace = true
cumulus-pallet-xcm.workspace = true

parachain-info.workspace = true
parachains-common.workspace = true
sc-consensus-grandpa.workspace = true
pallet-im-online.workspace = true
polkadot-primitives.workspace = true
polkadot-service.workspace = true
sp-authority-discovery.workspace = true
sp-consensus-babe.workspace = true
sp-consensus-beefy.workspace = true
polkadot-runtime-constants.workspace = true
system-parachains-constants.workspace = true
pallet-staking.workspace = true
pallet-membership.workspace = true
orml-oracle.workspace = true
pallet-parachain-staking.workspace = true
pallet-vesting.workspace = true
itertools.workspace = true
pallet-democracy.workspace = true
pallet-scheduler.workspace = true
pallet-treasury.workspace = true
frame-metadata-hash-extension.workspace = true
pallet-asset-tx-payment.workspace = true
sp-consensus-aura.workspace = true
pallet-aura.workspace = true
pallet-session.workspace = true
pallet-proxy-bonding.workspace = true
pallet-skip-feeless-payment.workspace = true
xcm-fee-payment-runtime-api.workspace = true
hex-literal.workspace = true
hex.workspace = true

# Runtimes
polkadot-runtime.workspace = true
asset-hub-polkadot-runtime.workspace = true
polimec-runtime.workspace = true
penpal-runtime = { path = "penpal", default-features = false }


[features]
default = [ "development-settings", "instant-mode", "std" ]
instant-mode = [ "polimec-runtime/instant-mode" ]
std = [
	"asset-hub-polkadot-runtime/std",
	"cumulus-pallet-xcm/std",
	"cumulus-primitives-core/std",
	"frame-metadata-hash-extension/std",
	"frame-support/std",
	"frame-system/std",
	"itertools/use_std",
	"orml-oracle/std",
	"pallet-asset-tx-payment/std",
	"pallet-assets/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-collective/std",
	"pallet-democracy/std",
	"pallet-dispenser/std",
	"pallet-elections-phragmen/std",
	"pallet-funding/std",
	"pallet-im-online/std",
	"pallet-linear-release/std",
	"pallet-membership/std",
	"pallet-message-queue/std",
	"pallet-parachain-staking/std",
	"pallet-proxy-bonding/std",
	"pallet-scheduler/std",
	"pallet-session/std",
	"pallet-skip-feeless-payment/std",
	"pallet-staking/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"pallet-vesting/std",
	"pallet-xcm/std",
	"parachain-info/std",
	"parachains-common/std",
	"parity-scale-codec/std",
	"penpal-runtime/std",
	"polimec-common-test-utils/std",
	"polimec-common/std",
	"polimec-receiver/std",
	"polimec-runtime/std",
	"polkadot-core-primitives/std",
	"polkadot-parachain-primitives/std",
	"polkadot-primitives/std",
	"polkadot-runtime-constants/std",
	"polkadot-runtime-parachains/std",
	"polkadot-runtime/std",
	"scale-info/std",
	"serde/std",
	"sp-arithmetic/std",
	"sp-authority-discovery/std",
	"sp-consensus-aura/std",
	"sp-consensus-babe/std",
	"sp-consensus-beefy/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"system-parachains-constants/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm-fee-payment-runtime-api/std",
	"xcm/std",
]
development-settings = [ "polimec-runtime/development-settings" ]
runtime-benchmarks = [
	"asset-hub-polkadot-runtime/runtime-benchmarks",
	"cumulus-primitives-core/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"orml-oracle/runtime-benchmarks",
	"pallet-asset-tx-payment/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-democracy/runtime-benchmarks",
	"pallet-dispenser/runtime-benchmarks",
	"pallet-elections-phragmen/runtime-benchmarks",
	"pallet-funding/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-linear-release/runtime-benchmarks",
	"pallet-membership/runtime-benchmarks",
	"pallet-message-queue/runtime-benchmarks",
	"pallet-parachain-staking/runtime-benchmarks",
	"pallet-proxy-bonding/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-skip-feeless-payment/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-vesting/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"parachains-common/runtime-benchmarks",
	"penpal-runtime/runtime-benchmarks",
	"polimec-common-test-utils/runtime-benchmarks",
	"polimec-common/runtime-benchmarks",
	"polimec-receiver/runtime-benchmarks",
	"polimec-runtime/runtime-benchmarks",
	"polkadot-parachain-primitives/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"polkadot-runtime-parachains/runtime-benchmarks",
	"polkadot-runtime/runtime-benchmarks",
	"polkadot-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
	"xcm-fee-payment-runtime-api/runtime-benchmarks",
]

