[package]
name = "macros"
version.workspace = true
edition.workspace = true

[lib]
name = "macros"
path = "src/lib.rs"
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.33"
syn = {  version = "2.0.39", features = ["extra-traits"]}
sp-core.workspace = true



[features]
default = [ "std" ]

std = [ "sp-core/std" ]
