[package]
name = "macros"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
name = "macros"
path = "src/lib.rs"
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.38"
syn = { version = "2.0.98", features = ["extra-traits"] }
sp-core.workspace = true


[features]
default = [ "std" ]

std = [ "sp-core/std" ]
