[package]
name = 'polimec-common'
description = 'Common types, traits, and impls for Polimec and Projects'
authors = ['Polimec Foundation <info@polimec.org>']
documentation = "https://wiki.polimec.org/"
edition = "2021"
homepage = "https://www.polimec.org/"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Polimec/polimec-node"
version = "0.1.0"
rust-version = "1.69.0"

[dependencies]
parity-scale-codec = { workspace = true, features = [
    "derive",
] }
scale-info = { workspace = true, features = [
    "derive",
] }
serde = { workspace = true, features = ["derive"] }
frame-benchmarking = { workspace = true,  optional = true }
frame-support.workspace = true
frame-system.workspace = true
sp-std.workspace = true
sp-runtime.workspace = true
itertools.workspace = true

[dev-dependencies]
sp-core.workspace = true
sp-io.workspace = true

[features]
default = [ "std" ]
std = [
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"itertools/use_alloc",
	"itertools/use_std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"itertools/use_std",
	"itertools/use_alloc",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"itertools/use_alloc",
	"sp-runtime/runtime-benchmarks",
	"itertools/use_alloc",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
