[package]
authors = ['Polimec Team <https://github.com/Polimec>']
edition = '2018'
license = 'Unlicense'
name = 'node-polimec-runtime'
repository = 'https://github.com/polimec/polimec-node'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies.wasm-builder-runner]
package = 'substrate-wasm-builder'
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.frame-system-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.pallet-transaction-payment-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.aura]
default-features = false
package = 'pallet-aura'
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.authorship]
default-features = false
package = 'pallet-authorship'
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies.frame-executive]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.grandpa]
default-features = false
package = 'pallet-grandpa'
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.multi-mint]
default-features = false
package = 'pallet-multi-mint'
path = '../pallets/multi-mint'
version = '0.1.0'

[dependencies.issuer-council]
default-features = false
package = 'pallet-issuer-council'
path = '../pallets/issuer-council'
version = '0.1.0'

[dependencies.multi-stake]
default-features = false
package = 'pallet-multi-stake'
path = '../pallets/multi-stake'
version = '0.1.0'

[dependencies.pallet-proposal]
default-features = false
path = '../pallets/proposal'
version = '0.1.0'

[dependencies.bonding-payouts]
package = 'pallet-bonding-payouts'
default-features = false
path = '../pallets/bonding-payouts'
version = '0.1.0'

# [dependencies.traits]
# default-features = false
# package = 'traits'
# path = '../pallets/traits'
# version = '0.1.0'

[dependencies.orml-tokens]
default-features = false
git = 'https://github.com/open-web3-stack/open-runtime-module-library'
rev = 'a428aba69e394f14901f19a305a12c89566d9215'

[dependencies.orml-traits]
default-features = false
git = 'https://github.com/open-web3-stack/open-runtime-module-library'
rev = 'a428aba69e394f14901f19a305a12c89566d9215'

[dependencies.randomness-collective-flip]
default-features = false
package = 'pallet-randomness-collective-flip'
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.session]
default-features = false
package = 'pallet-session'
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.sp-block-builder]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.sp-consensus-aura]
default-features = false
version = '0.8.0'
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.sp-inherents]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.sp-offchain]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.sp-session]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.sp-version]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.sudo]
default-features = false
package = 'pallet-sudo'
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.timestamp]
default-features = false
package = 'pallet-timestamp'
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.transaction-payment]
default-features = false
package = 'pallet-transaction-payment'
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

# Used for runtime benchmarking
[dependencies.frame-benchmarking]
default-features = false
optional = true
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

# Used for runtime benchmarking
[dependencies.orml-benchmarking]
default-features = false
git = 'https://github.com/open-web3-stack/open-runtime-module-library'
rev = 'a428aba69e394f14901f19a305a12c89566d9215'
optional = true

# Used for runtime benchmarking
[dependencies.frame-system-benchmarking]
default-features = false
optional = true
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

# Used for runtime benchmarking
[dependencies.hex-literal]
optional = true
version = '0.3.1'

[features]
runtime-benchmarks = [
  'frame-benchmarking',
  'frame-support/runtime-benchmarks',
  'frame-system-benchmarking',
  'frame-system/runtime-benchmarks',
  'hex-literal',
  'orml-benchmarking',
  'sp-runtime/runtime-benchmarks',
  'timestamp/runtime-benchmarks',
]

default = ['std']

std = [
  'aura/std',
  'authorship/std',
  'codec/std',
  'frame-benchmarking/std',
  'frame-executive/std',
  'frame-support/std',
  'frame-system-rpc-runtime-api/std',
  'frame-system/std',
  'grandpa/std',
  'issuer-council/std',
  'multi-mint/std',
  'multi-stake/std',
  'orml-benchmarking/std',
  'orml-tokens/std',
  'orml-traits/std',
  'pallet-proposal/std',
  'pallet-transaction-payment-rpc-runtime-api/std',
  'randomness-collective-flip/std',
  'serde',
  'session/std',
  'sp-api/std',
  'sp-block-builder/std',
  'sp-consensus-aura/std',
  'sp-core/std',
  'sp-inherents/std',
  'sp-io/std',
  'sp-offchain/std',
  'sp-runtime/std',
  'sp-session/std',
  'sp-std/std',
  'sp-transaction-pool/std',
  'sp-version/std',
  'sudo/std',
  'timestamp/std',
  'transaction-payment/std',
]
