[package]
name = 'polimec-traits'
description = 'Common traits for Polimec pallets'
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
parity-scale-codec = {  workspace = true, features = [
    "derive",
] }
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"], default-features = false }
frame-benchmarking = { workspace = true, optional = true }
frame-support.workspace = true
frame-system.workspace = true
sp-std.workspace = true
sp-runtime.workspace = true

[dev-dependencies]
sp-core.workspace = true
sp-io.workspace = true

[features]
default = ["std"]
std = [
    "frame-benchmarking?/std",
    "parity-scale-codec/std",
    "sp-std/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "serde/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
