[package]
name = 'polimec-traits'
description = 'Common traits for Polimec pallets'
authors = ['Polimec Foundation <info@polimec.org>']
documentation = "https://wiki.polimec.org/"
edition = "2021"
homepage = "https://www.polimec.org/"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Polimec/polimec-node"
version = "0.1.0"
rust-version = "1.69.0"

[dependencies]
parity-scale-codec = { version = "3.6.5", features = [
    "derive",
], default-features = false }
scale-info = { version = "2.9.0", default-features = false, features = [
    "derive",
] }
serde = { version = "1.0", features = ["derive"], default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.43" }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }

[features]
default = [ "std" ]
std = [
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [ "frame-benchmarking/runtime-benchmarks" ]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
